// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SeButtonGroup classes test should have "basic" class 1`] = `
<div class="ui basic buttons">
    <button class="ui icon button">
        <i class="play icon"></i>

        First</button>
    <button class="ui icon button">
        <i class="pause icon"></i>

        Second</button>
    <button class="ui icon button">
        <i class="mail icon"></i>

        Third</button>
</div>
`;

exports[`SeButtonGroup classes test should have "huge" class for size 1`] = `
<div class="huge ui buttons">
    <button class="ui icon button">
        <i class="play icon"></i>

        First</button>
    <button class="ui icon button">
        <i class="pause icon"></i>

        Second</button>
    <button class="ui icon button">
        <i class="mail icon"></i>

        Third</button>
</div>
`;

exports[`SeButtonGroup classes test should have "icon" class 1`] = `<div class="ui icon buttons"></div>`;

exports[`SeButtonGroup classes test should have "labeled" class for size 1`] = `
<div class="ui labeled buttons">
    <button class="ui  labeled button">
        <!---->
        hello
    </button>
    <button class="ui  labeled button">
        <!---->
        world
    </button>
    <button class="ui  labeled button">
        <!---->
        something
    </button>
</div>
`;

exports[`SeButtonGroup classes test should have "orange" class for color 1`] = `
<div class="orange ui buttons">
    <button class="ui icon button">
        <i class="play icon"></i>

        First</button>
    <button class="ui icon button">
        <i class="pause icon"></i>

        Second</button>
    <button class="ui icon button">
        <i class="mail icon"></i>

        Third</button>
</div>
`;

exports[`SeButtonGroup classes test should have "vertical" class 1`] = `
<div class="ui vertical buttons">
    <button class="ui icon button">
        <i class="play icon"></i>

        First</button>
    <button class="ui icon button">
        <i class="pause icon"></i>

        Second</button>
    <button class="ui icon button">
        <i class="mail icon"></i>

        Third</button>
</div>
`;

exports[`SeButtonGroup classes test should have number of columns in classList 1`] = `
<div class="three ui buttons">
    <button class="ui icon button">
        <i class="play icon"></i>

        First</button>
    <button class="ui icon button">
        <i class="pause icon"></i>

        Second</button>
    <button class="ui icon button">
        <i class="mail icon"></i>

        Third</button>
</div>
`;

exports[`SeButtonGroup snapshot test should match with exisitng snapshot 1`] = `
<div class="ui buttons">
    <button class="ui icon button">
        <i class="play icon"></i>

        First</button>
    <button class="ui icon button">
        <i class="pause icon"></i>

        Second</button>
    <button class="ui icon button">
        <i class="mail icon"></i>

        Third</button>
</div>
`;
